[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-machine"
version = "0.0.4"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "A machine enhancing the memory function of Abstract Intellect."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["memory-machine"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
memory-machine = "memory_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/memory-machine/memory-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]